CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

OPTION(MENGINE_DEPENDENCE_XMLSAX "xmlsax" ON)
OPTION(MENGINE_DEPENDENCE_LZ4 "lz4" ON)
OPTION(MENGINE_DEPENDENCE_BOX2D "Box2D" ON)
OPTION(MENGINE_DEPENDENCE_OGG "ogg" ON)
OPTION(MENGINE_DEPENDENCE_VORBIS "vorbis" ON)
OPTION(MENGINE_DEPENDENCE_THEORA "theora" ON)
OPTION(MENGINE_DEPENDENCE_ZLIB "zlib" ON)
OPTION(MENGINE_DEPENDENCE_GRAPHICS "graphics" ON)
OPTION(MENGINE_DEPENDENCE_POLY2TRI "poly2tri" ON)
OPTION(MENGINE_DEPENDENCE_JPEG "libjpeg" ON)
OPTION(MENGINE_DEPENDENCE_PYTHON "python" ON)
OPTION(MENGINE_DEPENDENCE_WEBP "libwebp" ON)
OPTION(MENGINE_DEPENDENCE_SPINE "spine" ON)
OPTION(MENGINE_DEPENDENCE_STDEX "stdex" ON)
OPTION(MENGINE_DEPENDENCE_FE "libfe" ON)
OPTION(MENGINE_DEPENDENCE_DAZZLE "dazzle" ON)
OPTION(MENGINE_DEPENDENCE_OZZ "ozz" ON)
OPTION(MENGINE_DEPENDENCE_LIBMOVIE "libmovie" ON)
OPTION(MENGINE_DEPENDENCE_JANSSON "jansson" ON)
OPTION(MENGINE_DEPENDENCE_JPP "jpp" ON)
OPTION(MENGINE_DEPENDENCE_PUGIXML "pugixml" ON)
OPTION(MENGINE_DEPENDENCE_GOAP "GOAP" ON)
OPTION(MENGINE_DEPENDENCE_METABUF "metabuf" ON)
OPTION(MENGINE_DEPENDENCE_MATH "libmath" ON)
OPTION(MENGINE_DEPENDENCE_TINYINI "tinyini" ON)
OPTION(MENGINE_DEPENDENCE_FREETYPE "freetype" ON)
OPTION(MENGINE_DEPENDENCE_OPENSSL "openssl" ON)
OPTION(MENGINE_DEPENDENCE_CURL "curl" ON)
OPTION(MENGINE_DEPENDENCE_SDL2 "SDL2" ON)
OPTION(MENGINE_DEPENDENCE_OPENAL_SOFT "openal-soft" ON)
OPTION(MENGINE_DEPENDENCE_PNG "libpng" ON)
OPTION(MENGINE_DEPENDENCE_SPNG "libspng" ON)
OPTION(MENGINE_DEPENDENCE_PYBIND "pybind" ON)
OPTION(MENGINE_DEPENDENCE_PYTHON3 "python3" ON)
OPTION(MENGINE_DEPENDENCE_PYBIND3 "pybind3" ON)
OPTION(MENGINE_DEPENDENCE_GLAD "glad" ON)
OPTION(MENGINE_DEPENDENCE_GLFW3 "glfw3" ON)
OPTION(MENGINE_DEPENDENCE_IMGUI "imgui" ON)
OPTION(MENGINE_DEPENDENCE_SENTRY "sentry" ON)
OPTION(MENGINE_DEPENDENCE_RPMALLOC "rpmalloc" ON)
OPTION(MENGINE_DEPENDENCE_OPTICK "optick" ON)
OPTION(MENGINE_DEPENDENCE_GAMEANALYTICS "gameanalytics" ON)

MESSAGE("MENGINE_DEPENDENCE_XMLSAX: ${MENGINE_DEPENDENCE_XMLSAX}")
MESSAGE("MENGINE_DEPENDENCE_LZ4: ${MENGINE_DEPENDENCE_LZ4}")
MESSAGE("MENGINE_DEPENDENCE_OGG: ${MENGINE_DEPENDENCE_OGG}")
MESSAGE("MENGINE_DEPENDENCE_VORBIS: ${MENGINE_DEPENDENCE_VORBIS}")
MESSAGE("MENGINE_DEPENDENCE_THEORA: ${MENGINE_DEPENDENCE_THEORA}")
MESSAGE("MENGINE_DEPENDENCE_ZLIB: ${MENGINE_DEPENDENCE_ZLIB}")
MESSAGE("MENGINE_DEPENDENCE_GRAPHICS: ${MENGINE_DEPENDENCE_GRAPHICS}")
MESSAGE("MENGINE_DEPENDENCE_POLY2TRI: ${MENGINE_DEPENDENCE_POLY2TRI}")
MESSAGE("MENGINE_DEPENDENCE_JPEG: ${MENGINE_DEPENDENCE_JPEG}")
MESSAGE("MENGINE_DEPENDENCE_PYTHON: ${MENGINE_DEPENDENCE_PYTHON}")
MESSAGE("MENGINE_DEPENDENCE_WEBP: ${MENGINE_DEPENDENCE_WEBP}")
MESSAGE("MENGINE_DEPENDENCE_SPINE: ${MENGINE_DEPENDENCE_SPINE}")
MESSAGE("MENGINE_DEPENDENCE_STDEX: ${MENGINE_DEPENDENCE_STDEX}")
MESSAGE("MENGINE_DEPENDENCE_FE: ${MENGINE_DEPENDENCE_FE}")
MESSAGE("MENGINE_DEPENDENCE_DAZZLE: ${MENGINE_DEPENDENCE_DAZZLE}")
MESSAGE("MENGINE_DEPENDENCE_OZZ: ${MENGINE_DEPENDENCE_OZZ}")
MESSAGE("MENGINE_DEPENDENCE_LIBMOVIE: ${MENGINE_DEPENDENCE_LIBMOVIE}")
MESSAGE("MENGINE_DEPENDENCE_JANSSON: ${MENGINE_DEPENDENCE_JANSSON}")
MESSAGE("MENGINE_DEPENDENCE_JPP: ${MENGINE_DEPENDENCE_JPP}")
MESSAGE("MENGINE_DEPENDENCE_PUGIXML: ${MENGINE_DEPENDENCE_PUGIXML}")
MESSAGE("MENGINE_DEPENDENCE_GOAP: ${MENGINE_DEPENDENCE_GOAP}")
MESSAGE("MENGINE_DEPENDENCE_METABUF: ${MENGINE_DEPENDENCE_METABUF}")
MESSAGE("MENGINE_DEPENDENCE_MATH: ${MENGINE_DEPENDENCE_MATH}")
MESSAGE("MENGINE_DEPENDENCE_TINYINI: ${MENGINE_DEPENDENCE_TINYINI}")
MESSAGE("MENGINE_DEPENDENCE_FREETYPE: ${MENGINE_DEPENDENCE_FREETYPE}")
MESSAGE("MENGINE_DEPENDENCE_OPENSSL: ${MENGINE_DEPENDENCE_OPENSSL}")
MESSAGE("MENGINE_DEPENDENCE_CURL: ${MENGINE_DEPENDENCE_CURL}")
MESSAGE("MENGINE_DEPENDENCE_SDL2: ${MENGINE_DEPENDENCE_SDL2}")
MESSAGE("MENGINE_DEPENDENCE_OPENAL_SOFT: ${MENGINE_DEPENDENCE_OPENAL_SOFT}")
MESSAGE("MENGINE_DEPENDENCE_PNG: ${MENGINE_DEPENDENCE_PNG}")
MESSAGE("MENGINE_DEPENDENCE_SPNG: ${MENGINE_DEPENDENCE_SPNG}")
MESSAGE("MENGINE_DEPENDENCE_PYBIND: ${MENGINE_DEPENDENCE_PYBIND}")
MESSAGE("MENGINE_DEPENDENCE_PYTHON3: ${MENGINE_DEPENDENCE_PYTHON3}")
MESSAGE("MENGINE_DEPENDENCE_PYBIND3: ${MENGINE_DEPENDENCE_PYBIND3}")
MESSAGE("MENGINE_DEPENDENCE_GLAD: ${MENGINE_DEPENDENCE_GLAD}")
MESSAGE("MENGINE_DEPENDENCE_GLFW3: ${MENGINE_DEPENDENCE_GLFW3}")
MESSAGE("MENGINE_DEPENDENCE_IMGUI: ${MENGINE_DEPENDENCE_IMGUI}")
MESSAGE("MENGINE_DEPENDENCE_SENTRY: ${MENGINE_DEPENDENCE_SENTRY}")
MESSAGE("MENGINE_DEPENDENCE_RPMALLOC: ${MENGINE_DEPENDENCE_RPMALLOC}")
MESSAGE("MENGINE_DEPENDENCE_OPTICK: ${MENGINE_DEPENDENCE_OPTICK}")
MESSAGE("MENGINE_DEPENDENCE_GAMEANALYTICS: ${MENGINE_DEPENDENCE_GAMEANALYTICS}")

PROJECT(Dependencies)

message("============@@##START##@@============")

if(MENGINE_DEPENDENCE_ZLIB)
    message("================zlib================")
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/zlib/CMakeLists.txt ${THIRDPARTY_DIR}/zlib/CMakeLists.txt COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/zlib/gzguts.h ${THIRDPARTY_DIR}/zlib/gzguts.h COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/zlib/adler32.c ${THIRDPARTY_DIR}/zlib/adler32.c COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/zlib/crc32.c ${THIRDPARTY_DIR}/zlib/crc32.c COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/zlib/gzappend.c ${THIRDPARTY_DIR}/zlib/gzappend.c COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/zlib/inflate.c ${THIRDPARTY_DIR}/zlib/inflate.c COPYONLY)
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/zlib ${CMAKE_TEMP_DIR}/zlib)
    
    set(ZLIB_LIBRARIES zlib CACHE STRING "ZLIB_LIBRARIES" FORCE)
    set(ZLIB_INCLUDE_DIRS "${THIRDPARTY_DIR}/zlib;${THIRDPARTY_CONFIG_DIR}/zlib" CACHE STRING "ZLIB_INCLUDE_DIRS" FORCE)
    
    set(ZLIB_LIBRARY ${ZLIB_LIBRARIES} CACHE STRING "ZLIB_LIBRARIES" FORCE)
    set(ZLIB_INCLUDE_DIR ${ZLIB_INCLUDE_DIRS} CACHE STRING "ZLIB_INCLUDE_DIRS" FORCE)
    
    message("ZLIB_LIBRARIES: ${ZLIB_LIBRARIES}")
    message("ZLIB_INCLUDE_DIRS: ${ZLIB_INCLUDE_DIRS}")
endif()

if(MENGINE_DEPENDENCE_GRAPHICS)
    message("================graphics================")
    
    set(GRAPHICS_EXTERNAL_BUILD ON CACHE BOOL "GRAPHICS_EXTERNAL_BUILD" FORCE)
    set(GRAPHICS_EXAMPLES_BUILD OFF CACHE BOOL "GRAPHICS_EXAMPLES_BUILD" FORCE)
    set(GRAPHICS_INSTALL OFF CACHE BOOL "GRAPHICS_INSTALL" FORCE)
    set(GRAPHICS_TESTS OFF CACHE BOOL "GRAPHICS_TESTS" FORCE)
    set(GRAPHICS_TESTS_IN_SOLUTIONS OFF CACHE BOOL "GRAPHICS_TESTS_IN_SOLUTIONS" FORCE)
    
    IF(MENGINE_RENDER_DIRECTX9)
        set(GRAPHICS_BGRA OFF CACHE BOOL "GRAPHICS_BGRA" FORCE)
    ELSEIF(MENGINE_RENDER_DIRECTX11)
        set(GRAPHICS_BGRA ON CACHE BOOL "GRAPHICS_BGRA" FORCE)
    ELSE()
        set(GRAPHICS_BGRA ON CACHE BOOL "GRAPHICS_BGRA" FORCE)
    ENDIF()
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/graphics ${CMAKE_TEMP_DIR}/graphics)
endif()

if(MENGINE_DEPENDENCE_JANSSON)
    message("================jansson================")
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/jansson/CMakeLists.txt ${THIRDPARTY_DIR}/jansson/CMakeLists.txt COPYONLY)
    
    set(JANSSON_BUILD_SHARED_LIBS OFF CACHE BOOL "JANSSON_BUILD_SHARED_LIBS" FORCE)
    set(USE_URANDOM OFF CACHE BOOL "USE_URANDOM" FORCE)
    set(USE_WINDOWS_CRYPTOAPI OFF CACHE BOOL "USE_WINDOWS_CRYPTOAPI" FORCE)
    set(JANSSON_STATIC_CRT ${MENGINE_STATIC_CRT} CACHE BOOL "JANSSON_STATIC_CRT" FORCE)
    set(JANSSON_EXAMPLES OFF CACHE BOOL "JANSSON_EXAMPLES" FORCE)
    set(JANSSON_BUILD_DOCS OFF CACHE BOOL "JANSSON_BUILD_DOCS" FORCE)
    set(JANSSON_WITHOUT_TESTS ON CACHE BOOL "JANSSON_WITHOUT_TESTS" FORCE)
    set(JANSSON_INSTALL OFF CACHE BOOL "JANSSON_INSTALL" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/jansson ${CMAKE_TEMP_DIR}/jansson)
    
    set(JANNSON_LIBRARIES ${THIRDPARTY_LIB_DIR}/${MENGINE_LIB_PREFIX}jansson${MENGINE_LIB_SUFFIX} CACHE STRING "JANNSON_LIBRARY" FORCE)
    set(JANSSON_INCLUDE_DIRS "${THIRDPARTY_CONFIG_DIR}/jansson/include" CACHE STRING "JANSSON_INCLUDE_DIRS" FORCE)
    
    set(JANNSON_LIBRARY ${JANNSON_LIBRARIES} CACHE STRING "JANNSON_LIBRARY" FORCE)
    set(JANSSON_INCLUDE_DIR ${JANSSON_INCLUDE_DIRS} CACHE STRING "JANSSON_INCLUDE_DIR" FORCE)
    
    message("JANNSON_LIBRARIES: ${JANNSON_LIBRARIES}")
    message("JANSSON_INCLUDE_DIRS: ${JANSSON_INCLUDE_DIRS}")
endif()

if(MENGINE_DEPENDENCE_DAZZLE)
    message("================dazzle================")
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/dazzle ${CMAKE_TEMP_DIR}/dazzle)
endif()

if(MENGINE_DEPENDENCE_BOX2D)
    message("================Box2D================")
    SET(BOX2D_BUILD_UNIT_TESTS OFF CACHE BOOL "BOX2D_BUILD_UNIT_TESTS" FORCE)
    SET(BOX2D_BUILD_TESTBED OFF CACHE BOOL "BOX2D_BUILD_TESTBED" FORCE)
    SET(BOX2D_BUILD_DOCS OFF CACHE BOOL "BOX2D_BUILD_DOCS" FORCE)
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/box2d ${CMAKE_TEMP_DIR}/box2d)
endif()

if(MENGINE_DEPENDENCE_LZ4)
    message("================lz4================")
    ADD_SUBDIRECTORY(lz4)
endif()

if(MENGINE_DEPENDENCE_OGG)
    message("================libogg================")
    SET(BUILD_SHARED_LIBS OFF CACHE BOOL "BUILD_SHARED_LIBS" FORCE)
    SET(INSTALL_DOCS OFF CACHE BOOL "BUILD_SHARED_LIBS" FORCE)
    SET(INSTALL_PKG_CONFIG_MODULE OFF CACHE BOOL "INSTALL_PKG_CONFIG_MODULE" FORCE)
    SET(INSTALL_CMAKE_PACKAGE_MODULE OFF CACHE BOOL "INSTALL_CMAKE_PACKAGE_MODULE" FORCE)
    SET(BUILD_TESTING OFF CACHE BOOL "INSTALL_CMAKE_PACKAGE_MODULE" FORCE)
    
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/libogg/Modified/os_types.h ${THIRDPARTY_DIR}/libogg/include/ogg/os_types.h COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/libogg/CMakeLists.txt ${THIRDPARTY_DIR}/libogg/CMakeLists.txt COPYONLY)
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/libogg ${CMAKE_TEMP_DIR}/libogg)
    
    set(OGG_LIBRARIES ogg CACHE STRING "OGG_LIBRARIES" FORCE)
    set(OGG_INCLUDE_DIRS "${THIRDPARTY_DIR}/libogg/include" CACHE STRING "OGG_INCLUDE_DIRS" FORCE)
    
    set(OGG_LIBRARY ${OGG_LIBRARIES} CACHE STRING "OGG_LIBRARY" FORCE)
    set(OGG_INCLUDE_DIR ${OGG_INCLUDE_DIRS} CACHE STRING "OGG_INCLUDE_DIR" FORCE)
    
    message("OGG_LIBRARIES: ${OGG_LIBRARIES}")
    message("OGG_INCLUDE_DIRS: ${OGG_INCLUDE_DIRS}")    
endif()

if(MENGINE_DEPENDENCE_VORBIS)
    message("================libvorbis================")
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/libvorbis/CMakeLists.txt ${THIRDPARTY_DIR}/libvorbis/CMakeLists.txt COPYONLY)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/libvorbis ${CMAKE_TEMP_DIR}/libvorbis)
endif()

if(MENGINE_DEPENDENCE_THEORA)
    message("================libtheora================")
    
    ADD_SUBDIRECTORY(libtheora)
endif()


if(MENGINE_DEPENDENCE_POLY2TRI)
    message("================poly2tri================")
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/poly2tri ${CMAKE_TEMP_DIR}/poly2tri)
endif()

if(MENGINE_DEPENDENCE_PNG)
    message("================libpng================")
    set(PNG_BUILD_ZLIB ON CACHE BOOL "PNG_BUILD_ZLIB" FORCE)
    set(PNG_SHARED OFF CACHE BOOL "PNG_SHARED" FORCE)
    set(PNG_STATIC ON CACHE BOOL "PNG_STATIC" FORCE)
    set(PNG_EXECUTABLES OFF CACHE BOOL "PNG_EXECUTABLES" FORCE)
    set(PNG_TESTS OFF CACHE BOOL "PNG_TESTS" FORCE)
    set(PNG_FRAMEWORK OFF CACHE BOOL "PNG_FRAMEWORK" FORCE)
    set(PNG_DEBUG OFF CACHE BOOL "PNG_DEBUG" FORCE)
    set(PNGARG OFF CACHE BOOL "PNGARG" FORCE)
    set(PNG_HARDWARE_OPTIMIZATIONS OFF CACHE BOOL "PNG_HARDWARE_OPTIMIZATIONS" FORCE)
    set(SKIP_INSTALL_ALL ON CACHE BOOL "SKIP_INSTALL_ALL" FORCE)

    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/libpng/CMakeLists.txt ${THIRDPARTY_DIR}/libpng/CMakeLists.txt COPYONLY)
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/libpng ${CMAKE_TEMP_DIR}/libpng)
    add_dependencies(png_static zlib)
    
    if(MENGINE_TOOLCHAIN_MSVC)
        set(PNG_LIBRARIES ${MENGINE_LIB_PREFIX}libpng16_static${MENGINE_DEPENDENCIES_DEBUG_SUFFIX}${MENGINE_LIB_SUFFIX} CACHE STRING "PNG_LIBRARIES" FORCE)
    else()
        set(PNG_LIBRARIES ${MENGINE_LIB_PREFIX}png16${MENGINE_DEPENDENCIES_DEBUG_SUFFIX}${MENGINE_LIB_SUFFIX} CACHE STRING "PNG_LIBRARIES" FORCE)
    endif()
    
    set(PNG_INCLUDE_DIRS "${THIRDPARTY_DIR}/libpng ${THIRDPARTY_CONFIG_DIR}/libpng" CACHE STRING "PNG_INCLUDE_DIRS" FORCE)
    
    set(PNG_LIBRARY ${PNG_LIBRARIES} CACHE STRING "PNG_LIBRARY" FORCE)
    set(PNG_INCLUDE_DIR ${PNG_INCLUDE_DIRS} CACHE STRING "PNG_INCLUDE_DIR" FORCE)
        
    message("PNG_LIBRARIES: ${PNG_LIBRARIES}")
    message("PNG_INCLUDE_DIRS: ${PNG_INCLUDE_DIRS}")
endif()

if(MENGINE_DEPENDENCE_JPEG)
    message("================libjpeg================")
    ADD_SUBDIRECTORY(libjpeg)
    
    set(JPEG_LIBRARIES ${MENGINE_LIB_PREFIX}jpeg${MENGINE_DEPENDENCIES_DEBUG_SUFFIX}${MENGINE_LIB_SUFFIX} CACHE STRING "JPEG_LIBRARIES" FORCE)    
    set(JPEG_INCLUDE_DIRS "${THIRDPARTY_DIR}/libjpeg ${THIRDPARTY_CONFIG_DIR}/libjpeg" CACHE STRING "JPEG_INCLUDE_DIRS" FORCE)
    
    set(JPEG_LIBRARY ${JPEG_LIBRARIES} CACHE STRING "JPEG_LIBRARY" FORCE)
    set(JPEG_INCLUDE_DIR ${JPEG_INCLUDE_DIRS} CACHE STRING "JPEG_INCLUDE_DIR" FORCE)
    
    message("JPEG_LIBRARIES: ${JPEG_LIBRARIES}")
    message("JPEG_INCLUDE_DIRS: ${JPEG_INCLUDE_DIRS}")
endif()


if(MENGINE_DEPENDENCE_PYTHON)
    message("================python================")
    ADD_SUBDIRECTORY(python)
endif()

if(MENGINE_DEPENDENCE_XMLSAX)
    message("================xmlsax================")
    set(XMLSAX_EXTERNAL_BUILD ON CACHE BOOL "XMLSAX_EXTERNAL_BUILD" FORCE)
    set(XMLSAX_INSTALL OFF CACHE BOOL "XMLSAX_INSTALL" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/xmlsax ${CMAKE_TEMP_DIR}/xmlsax)
endif()

if(MENGINE_DEPENDENCE_WEBP)
    message("================libwebp================")
    
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/libwebp/CMakeLists.txt ${THIRDPARTY_DIR}/libwebp/CMakeLists.txt COPYONLY)
    
    set(PNG_PNG_INCLUDE_DIR ${PNG_INCLUDE_DIRS} CACHE STRING "PNG_PNG_INCLUDE_DIR" FORCE)
    
    set(WEBP_ENABLE_SIMD ON CACHE BOOL "Enable any SIMD optimization." FORCE)
    set(WEBP_BUILD_ANIM_UTILS OFF CACHE BOOL "WEBP_BUILD_ANIM_UTILS" FORCE)
    set(WEBP_BUILD_CWEBP OFF CACHE BOOL "Build the cwebp command line tool." FORCE)
    set(WEBP_BUILD_DWEBP OFF CACHE BOOL "Build the dwebp command line tool." FORCE)
    set(WEBP_BUILD_GIF2WEBP OFF CACHE BOOL "Build the gif2webp conversion tool." FORCE)
    set(WEBP_BUILD_IMG2WEBP OFF CACHE BOOL "Build the img2webp animation tool." FORCE)
    set(WEBP_BUILD_VWEBP OFF CACHE BOOL "Build the vwebp viewer tool." FORCE)
    set(WEBP_BUILD_WEBPINFO OFF CACHE BOOL "Build the webpinfo command line tool." FORCE)
    set(WEBP_BUILD_WEBPMUX OFF CACHE BOOL "Build the webpinfo command line tool." FORCE)
    set(WEBP_BUILD_EXTRAS OFF CACHE BOOL "Build extras." FORCE)
    set(WEBP_BUILD_WEBP_JS OFF CACHE BOOL "Emscripten build of webp.js" FORCE)
    set(WEBP_NEAR_LOSSLESS OFF CACHE BOOL "Enable near-lossless encoding" FORCE)
    set(WEBP_ENABLE_SWAP_16BIT_CSP OFF CACHE BOOL "Enable byte swap for 16 bit colorspaces." FORCE)
    set(WEBP_UNICODE OFF CACHE BOOL "Build Unicode executables." FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/libwebp ${CMAKE_TEMP_DIR}/libwebp)
endif()

if(MENGINE_DEPENDENCE_SPINE)
    message("================spine================")
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/spine/spine-c ${CMAKE_TEMP_DIR}/spine-c)
endif() 

if(MENGINE_DEPENDENCE_STDEX)
    message("================stdex================")
    set(STDEX_EXTERNAL_BUILD ON CACHE BOOL "STDEX_EXTERNAL_BUILD" FORCE)
    set(STDEX_INSTALL OFF CACHE BOOL "STDEX_EXTERNAL_BUILD" FORCE)
    set(STDEX_DBGHELP_INCLUDE "${MENGINE_REPOSITORY}/src/Environment/Windows" CACHE STRING "STDEX_DBGHELP_INCLUDE" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/stdex ${CMAKE_TEMP_DIR}/stdex)
endif()

if(MENGINE_DEPENDENCE_FE)
    message("================libfe================")
    set(FE_EXTERNAL_BUILD ON CACHE BOOL "FE_EXTERNAL_BUILD" FORCE)
    set(FE_TEST_BUILD OFF CACHE BOOL "FE_TEST_BUILD" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/libfe ${CMAKE_TEMP_DIR}/libfe)
endif()

if(MENGINE_DEPENDENCE_OZZ)
message("================ozz================")
    set(ozz_build_tools OFF CACHE BOOL "ozz_build_tools" FORCE)
    set(ozz_build_fbx OFF CACHE BOOL "ozz_build_fbx" FORCE)
    set(ozz_build_gltf OFF CACHE BOOL "ozz_build_gltf" FORCE)
    set(ozz_build_data OFF CACHE BOOL "ozz_build_data" FORCE)
    set(ozz_build_samples OFF CACHE BOOL "ozz_build_samples" FORCE)
    set(ozz_build_howtos OFF CACHE BOOL "ozz_build_howtos" FORCE)
    set(ozz_build_tests OFF CACHE BOOL "ozz_build_tests" FORCE)
    set(ozz_build_simd_ref OFF CACHE BOOL "ozz_build_simd_ref" FORCE)
    set(ozz_build_cpp11 ON CACHE BOOL "ozz_build_cpp11" FORCE)
    set(ozz_build_msvc_rt_dll ${MENGINE_DYNAMIC_CRT} CACHE BOOL "ozz_build_msvc_rt_dll" FORCE)
    set(ozz_build_postfix OFF CACHE BOOL "ozz_build_postfix" FORCE)
    set(ozz_run_tests_headless OFF CACHE BOOL "ozz_run_tests_headless" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/ozz ${CMAKE_TEMP_DIR}/ozz)
endif()

if(MENGINE_DEPENDENCE_LIBMOVIE)
    message("================libmovie================")
    set(LIBMOVIE_EXTERNAL_BUILD ON CACHE BOOL "LIBMOVIE_EXTERNAL_BUILD" FORCE)
    set(LIBMOVIE_EXAMPLES_BUILD OFF CACHE BOOL "LIBMOVIE_EXAMPLES_BUILD" FORCE)
    set(LIBMOVIE_COVERAGE OFF CACHE BOOL "LIBMOVIE_COVERAGE" FORCE)
    set(LIBMOVIE_INSTALL OFF CACHE BOOL "LIBMOVIE_INSTALL" FORCE)
    set(LIBMOVIE_TEST OFF CACHE BOOL "LIBMOVIE_TEST" FORCE)
    set(LIBMOVIE_MEMORY_DEBUG OFF CACHE BOOL "LIBMOVIE_MEMORY_DEBUG" FORCE)    

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/libmovie ${CMAKE_TEMP_DIR}/libmovie)
endif()

if(MENGINE_DEPENDENCE_JPP)
    message("================jpp================")
    set(JPP_EXTERNAL_BUILD ON CACHE BOOL "JPP_EXTERNAL_BUILD" FORCE)
    set(JPP_JANSSON_INCLUDE_PATH ${JANSSON_INCLUDE_DIRS} CACHE STRING "JPP_JANSSON_INCLUDE_PATH" FORCE)
    set(JPP_TEST OFF CACHE BOOL "JPP_TEST" FORCE)
    set(JPP_INSTALL OFF CACHE BOOL "JPP_INSTALL" FORCE)    

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/jpp ${CMAKE_TEMP_DIR}/jpp)
    add_dependencies(jpp jansson)
endif()

if(MENGINE_DEPENDENCE_PUGIXML)
    message("================pugixml================")
    set(BUILD_SHARED_LIBS OFF CACHE STRING "BUILD_SHARED_LIBS" FORCE)
    set(BUILD_TESTS OFF CACHE BOOL "BUILD_TESTS" FORCE)
    set(USE_VERSIONED_LIBDIR OFF CACHE STRING "USE_VERSIONED_LIBDIR" FORCE)
    set(STATIC_CRT ${MENGINE_STATIC_CRT} CACHE STRING "STATIC_CRT" FORCE)
    set(USE_POSTFIX OFF CACHE STRING "USE_POSTFIX" FORCE)
    set(BUILD_DEFINES "PUGIXML_NO_XPATH" CACHE STRING "BUILD_DEFINES" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/pugixml ${CMAKE_TEMP_DIR}/pugixml)
endif()

if(MENGINE_DEPENDENCE_GOAP)
    message("================GOAP================")
    set(LIBGOAP_EXTERNAL_BUILD ON CACHE BOOL "LIBGOAP_EXTERNAL_BUILD" FORCE)
    set(LIBGOAP_BUILD_TEST OFF CACHE BOOL "LIBGOAP_BUILD_TEST" FORCE)
    set(LIBGOAP_EXTERNAL_CONFIG_INCLUDE ON CACHE BOOL "LIBGOAP_EXTERNAL_CONFIG_INCLUDE" FORCE)
    set(LIBGOAP_EXTERNAL_CONFIG_INCLUDE_PATH ${THIRDPARTY_DIR}/stdex/include ${CMAKE_CURRENT_SOURCE_DIR}/GOAP/Config CACHE STRING "LIBGOAP_EXTERNAL_CONFIG_INCLUDE_PATH" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/GOAP ${CMAKE_TEMP_DIR}/GOAP)
endif()

if(MENGINE_DEPENDENCE_METABUF)
    message("================metabuf================")
    set(METABUF_EXTERNAL_BUILD ON CACHE BOOL "METABUF_EXTERNAL_BUILD" FORCE)
    set(METABUF_TEST OFF CACHE BOOL "METABUF_TEST" FORCE)
    set(METABUF_METAGEN OFF CACHE BOOL "METABUF_METAGEN" FORCE)
    set(METABUF_XML2METABUF ON CACHE BOOL "METABUF_XML2METABUF" FORCE)

    SET(METABUF_PUGIXML_EXTERNAL ON CACHE BOOL "METABUF_PUGIXML_EXTERNAL" FORCE)
    SET(METABUF_PUGIXML_INCLUDE_DIRS ${THIRDPARTY_DIR}/pugixml/src CACHE STRING "METABUF_PUGIXML_INCLUDE_DIRS" FORCE)
    SET(METABUF_PUGIXML_LIBRARIES ${THIRDPARTY_LIB_DIR}/${MENGINE_LIB_PREFIX}pugixml${MENGINE_LIB_SUFFIX} CACHE STRING "METABUF_PUGIXML_LIBRARIES" FORCE)
    SET(METABUF_EXTERNAL_CONFIG ON CACHE BOOL "METABUF_EXTERNAL_CONFIG" FORCE)

    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/metabuf/Metaexternalconfig.hpp ${THIRDPARTY_DIR}/metabuf/include/config/Metaexternalconfig.hpp COPYONLY)
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/metabuf ${CMAKE_TEMP_DIR}/metabuf)
    add_dependencies(metabuf pugixml)
endif()

if(MENGINE_DEPENDENCE_MATH)
    message("================libmath================")
    set(LIBMATH_EXTERNAL_BUILD ON CACHE BOOL "LIBMATH_EXTERNAL_BUILD" FORCE)
    set(LIBMATH_EXAMPLES_BUILD OFF CACHE BOOL "LIBMATH_EXAMPLES_BUILD" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/libmath ${CMAKE_TEMP_DIR}/libmath)
endif()

if(MENGINE_DEPENDENCE_TINYINI)
    message("================tinyini================")
    set(TINYINI_EXTERNAL_BUILD ON CACHE BOOL "TINYINI_EXTERNAL_BUILD" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/tinyini ${CMAKE_TEMP_DIR}/tinyini)
endif()

if(MENGINE_DEPENDENCE_FREETYPE)
    message("================freetype================")    
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/freetype/ftoption.h ${THIRDPARTY_DIR}/freetype/include/freetype/config/ftoption.h COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/freetype/ftstdlib.h ${THIRDPARTY_DIR}/freetype/include/freetype/config/ftstdlib.h COPYONLY)
    
    set(SKIP_INSTALL_ALL ON CACHE BOOL "SKIP_INSTALL_ALL" FORCE)
    set(DISABLE_FORCE_DEBUG_POSTFIX ON CACHE BOOL "DISABLE_FORCE_DEBUG_POSTFIX" FORCE)

    if(MENGINE_TARGET_IOS OR MENGINE_TARGET_IOS_SIMULATOR)
        set(IOS_PLATFORM "OS" CACHE STRING "IOS_PLATFORM" FORCE)
    endif()

    set(FT_WITH_ZLIB OFF CACHE BOOL "FT_WITH_ZLIB" FORCE)
    set(FT_WITH_BZIP2 OFF CACHE BOOL "FT_WITH_BZIP2" FORCE)
    set(FT_WITH_PNG OFF CACHE BOOL "FT_WITH_PNG" FORCE)
    set(FT_WITH_HARFBUZZ OFF CACHE BOOL "FT_WITH_HARFBUZZ" FORCE)
    set(FT_WITH_BROTLI OFF CACHE BOOL "FT_WITH_BROTLI" FORCE)
    
    set(CMAKE_DISABLE_FIND_PACKAGE_ZLIB_OLD ${CMAKE_DISABLE_FIND_PACKAGE_ZLIB})
    set(CMAKE_DISABLE_FIND_PACKAGE_BZip2_OLD ${CMAKE_DISABLE_FIND_PACKAGE_BZip2})
    set(CMAKE_DISABLE_FIND_PACKAGE_PNG_OLD ${CMAKE_DISABLE_FIND_PACKAGE_PNG})
    set(CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz_OLD ${CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz})
    set(CMAKE_DISABLE_FIND_PACKAGE_BrotliDec_OLD ${CMAKE_DISABLE_FIND_PACKAGE_BrotliDec})
    
    set(CMAKE_DISABLE_FIND_PACKAGE_ZLIB ON CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_ZLIB" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_BZip2 ON CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_BZip2" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_PNG ON CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_PNG" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz ON CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_BrotliDec ON CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_BrotliDec" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/freetype ${CMAKE_TEMP_DIR}/freetype)
    
    set(CMAKE_DISABLE_FIND_PACKAGE_ZLIB ${CMAKE_DISABLE_FIND_PACKAGE_ZLIB_OLD} CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_ZLIB" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_BZip2 ${CMAKE_DISABLE_FIND_PACKAGE_BZip2_OLD} CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_BZip2" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_PNG ${CMAKE_DISABLE_FIND_PACKAGE_PNG_OLD} CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_PNG" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz ${CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz_OLD} CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz" FORCE)
    set(CMAKE_DISABLE_FIND_PACKAGE_BrotliDec ${CMAKE_DISABLE_FIND_PACKAGE_BrotliDec_OLD} CACHE BOOL "CMAKE_DISABLE_FIND_PACKAGE_BrotliDec" FORCE)
    
    add_dependencies(freetype zlib)
    
    if(MENGINE_TARGET_IOS OR MENGINE_TARGET_IOS)
        unset(IOS_PLATFORM CACHE)
    endif()
endif()

if(MENGINE_DEPENDENCE_OPENSSL AND (NOT MENGINE_TARGET_IOS AND NOT MENGINE_TARGET_IOS_SIMULATOR))
    message("================openssl================")    
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/openssl/CMakeLists.txt ${THIRDPARTY_DIR}/openssl/CMakeLists.txt COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/openssl/threads_pthread.c ${THIRDPARTY_DIR}/openssl/crypto/threads_pthread.c COPYONLY)
    
    set(WITH_APPS OFF CACHE BOOL "WITH_APPS" FORCE)
    set(MSVC_DYNAMIC_RUNTIME ${MENGINE_DYNAMIC_CRT} CACHE BOOL "MSVC_DYNAMIC_RUNTIME" FORCE)
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/openssl ${CMAKE_TEMP_DIR}/openssl)
    
    set(OPENSSL_ROOT_DIR ${THIRDPARTY_LIB_DIR} CACHE STRING "OPENSSL_ROOT_DIR" FORCE)
    set(OPENSSL_SSL_LIBRARIES ${THIRDPARTY_LIB_DIR} CACHE STRING "OPENSSL_SSL_LIBRARIES" FORCE)
    set(OPENSSL_SSL_LIBRARY ${OPENSSL_SSL_LIBRARIES} CACHE STRING "OPENSSL_SSL_LIBRARY" FORCE)
    set(OPENSSL_CRYPTO_LIBRARIES ${THIRDPARTY_LIB_DIR} CACHE STRING "OPENSSL_CRYPTO_LIBRARIES" FORCE)
    set(OPENSSL_CRYPTO_LIBRARY ${OPENSSL_CRYPTO_LIBRARIES} CACHE STRING "OPENSSL_CRYPTO_LIBRARY" FORCE)
    set(OPENSSL_LIBDIR ${THIRDPARTY_LIB_DIR} CACHE STRING "OPENSSL_LIBDIR" FORCE)
    set(OPENSSL_LIBRARIES libssl_1_1.a libcrypto_1_1.a CACHE STRING "OPENSSL_LIBRARIES" FORCE)
    set(OPENSSL_INCLUDE_DIRS "${CMAKE_TEMP_DIR}/openssl/include" CACHE STRING "OPENSSL_INCLUDE_DIRS" FORCE)
    set(OPENSSL_INCLUDE_DIR ${OPENSSL_INCLUDE_DIRS} CACHE STRING "OPENSSL_INCLUDE_DIR" FORCE)
    set(OPENSSL_USE_STATIC_LIBS ON CACHE BOOL "OPENSSL_USE_STATIC_LIBS" FORCE)
    
    message("OPENSSL_ROOT_DIR: ${OPENSSL_ROOT_DIR}")
    message("OPENSSL_SSL_LIBRARIES: ${OPENSSL_SSL_LIBRARIES}")
    message("OPENSSL_CRYPTO_LIBRARIES: ${OPENSSL_CRYPTO_LIBRARIES}")
    message("OPENSSL_LIBDIR: ${OPENSSL_LIBDIR}")
    message("OPENSSL_LIBRARIES: ${OPENSSL_LIBRARIES}")
    message("OPENSSL_INCLUDE_DIRS: ${OPENSSL_INCLUDE_DIRS}")
    message("OPENSSL_USE_STATIC_LIBS: ${OPENSSL_USE_STATIC_LIBS}")
endif()

if(MENGINE_DEPENDENCE_CURL)
    message("================curl================")
    
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/curl/CMakeLists.txt ${THIRDPARTY_DIR}/curl/CMakeLists.txt COPYONLY)
    
    set(BUILD_CURL_EXE OFF CACHE BOOL "Set to ON to build curl executable." FORCE)
    if(MENGINE_TOOLCHAIN_MSVC)
        set(CURL_STATIC_CRT ${MENGINE_STATIC_CRT} CACHE BOOL "Set to ON to build libcurl with static CRT on Windows (/MT)." FORCE)
    endif()
    set(BUILD_TESTING OFF CACHE BOOL "Set to ON to build curl executable." FORCE)
    set(ENABLE_MANUAL OFF CACHE BOOL "to provide the built-in manual" FORCE)
    set(CURL_STATICLIB ON CACHE BOOL "Set to ON to build libcurl with static linking." FORCE)
    set(BUILD_SHARED_LIBS OFF CACHE BOOL "Build shared libraries" FORCE)
    set(CURL_LTO OFF CACHE BOOL "Turn on compiler Link Time Optimizations" FORCE)
    set(HTTP_ONLY OFF CACHE BOOL "disables all protocols except HTTP (This overrides all CURL_DISABLE_* options)" FORCE)
    set(CURL_DISABLE_FTP ON CACHE BOOL "CURL_DISABLE_FTP" FORCE)
    set(CURL_DISABLE_LDAP ON CACHE BOOL "CURL_DISABLE_LDAP" FORCE)
    set(CURL_DISABLE_LDAPS ON CACHE BOOL "CURL_DISABLE_LDAPS" FORCE)
    set(CURL_DISABLE_TELNET ON CACHE BOOL "CURL_DISABLE_TELNET" FORCE)
    set(CURL_DISABLE_DICT ON CACHE BOOL "CURL_DISABLE_DICT" FORCE)
    set(CURL_DISABLE_FILE ON CACHE BOOL "CURL_DISABLE_FILE" FORCE)
    set(CURL_DISABLE_TFTP ON CACHE BOOL "CURL_DISABLE_TFTP" FORCE)
    set(CURL_DISABLE_LDAPS ON CACHE BOOL "CURL_DISABLE_LDAPS" FORCE)
    set(CURL_DISABLE_RTSP ON CACHE BOOL "CURL_DISABLE_RTSP" FORCE)
    set(CURL_DISABLE_PROXY ON CACHE BOOL "CURL_DISABLE_RTSP" FORCE)
    set(CURL_DISABLE_POP3 ON CACHE BOOL "CURL_DISABLE_POP3" FORCE)
    set(CURL_DISABLE_IMAP ON CACHE BOOL "CURL_DISABLE_IMAP" FORCE)
    set(CURL_DISABLE_SMTP ON CACHE BOOL "CURL_DISABLE_SMTP" FORCE)
    set(CURL_DISABLE_GOPHER ON CACHE BOOL "CURL_DISABLE_GOPHER" FORCE)
    
    set(CURL_ZLIB ON CACHE BOOL "CURL_ZLIB" FORCE)
    
    set(CURL_USE_OPENSSL OFF CACHE BOOL "Use CURL_USE_OPENSSL code. Experimental" FORCE)
    set(CURL_USE_SCHANNEL OFF CACHE BOOL "Use CURL_USE_SCHANNEL code. Experimental" FORCE)
    set(CURL_USE_LIBSSH2 OFF CACHE BOOL "Use CURL_USE_LIBSSH2 code. Experimental" FORCE)
    set(CURL_USE_SECTRANSP OFF CACHE BOOL "Use CURL_USE_SECTRANSP code. Experimental" FORCE)
    
    set(USE_LIBIDN2 OFF CACHE BOOL "Use libidn2 for IDN support" FORCE)

    set(CURL_DISABLE_COOKIES OFF CACHE BOOL "CURL_DISABLE_COOKIES" FORCE)
    set(CURL_DISABLE_CRYPTO_AUTH OFF CACHE BOOL "CURL_DISABLE_CRYPTO_AUTH" FORCE)

    set(CURL_CA_PATH "none" CACHE STRING "CURL_CA_PATH" FORCE)
    
    set(ENABLE_IPV6 ON CACHE BOOL "ENABLE_IPV6" FORCE)

    if(MENGINE_TARGET_IOS OR MENGINE_TARGET_IOS_SIMULATOR)
        set(CURL_USE_OPENSSL OFF CACHE BOOL "Use CURL_USE_OPENSSL code. Experimental" FORCE)
    endif()

    if(MENGINE_TARGET_ANDROID)
        set(CURL_USE_OPENSSL ON CACHE BOOL "Use CURL_USE_OPENSSL code. Experimental" FORCE)
        set(PERL_EXECUTABLE "perl" CACHE STRING "PERL_EXECUTABLE" FORCE)
    endif()
        
    if(MENGINE_TARGET_WINDOWS)
        set(CURL_USE_SCHANNEL ON CACHE BOOL "Use CURL_USE_SCHANNEL code. Experimental" FORCE)
    endif()

    if(MENGINE_TARGET_IOS OR MENGINE_TARGET_IOS_SIMULATOR)
        set(ENABLE_THREADED_RESOLVER ON CACHE BOOL "ENABLE_THREADED_RESOLVER" FORCE)
        set(CURL_USE_SECTRANSP ON CACHE BOOL "Use CURL  _USE_SECTRANSP code. Experimental" FORCE)
    endif()
    
    if(MENGINE_TARGET_UNIX)
        set(OPENSSL_CRYPTO_LIBRARIES /usr/local/ssl/lib/ CACHE STRING "OPENSSL_CRYPTO_LIBRARIES" FORCE)
        set(OPENSSL_LIBRARIES libssl.a libcrypto.a CACHE STRING "OPENSSL_LIBRARIES" FORCE)
        set(OPENSSL_INCLUDE_DIRS "/usr/local/ssl/include" CACHE STRING "OPENSSL_INCLUDE_DIRS" FORCE)
        set(OPENSSL_USE_STATIC_LIBS ON CACHE BOOL "OPENSSL_USE_STATIC_LIBS" FORCE)
        set(CURL_USE_OPENSSL ON CACHE BOOL "Use CURL_USE_OPENSSL code. Experimental" FORCE)
    endif()
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/curl ${CMAKE_TEMP_DIR}/curl)
    
    set(CURL_LIBRARIES curl CACHE STRING "CURL_LIBRARIES" FORCE)
    set(CURL_INCLUDE_DIRS "${THIRDPARTY_DIR}/curl/include" CACHE STRING "CURL_INCLUDE_DIRS" FORCE)
    
    message("CURL_LIBRARIES: ${CURL_LIBRARIES}")
    message("CURL_INCLUDE_DIRS: ${CURL_INCLUDE_DIRS}")
    
    add_dependencies(libcurl zlib)
endif()

if(MENGINE_TARGET_WINDOWS OR MENGINE_TARGET_UNIX)
    if(MENGINE_DEPENDENCE_SENTRY)
        message("================sentry================")
        configure_file(${CMAKE_CURRENT_SOURCE_DIR}/sentry/CMakeLists.txt ${THIRDPARTY_DIR}/sentry/CMakeLists.txt COPYONLY)
        configure_file(${CMAKE_CURRENT_SOURCE_DIR}/sentry/minidump_context_writer.cc ${THIRDPARTY_DIR}/sentry/external/crashpad/minidump/minidump_context_writer.cc COPYONLY)
        configure_file(${CMAKE_CURRENT_SOURCE_DIR}/sentry/minidump_misc_info_writer.cc ${THIRDPARTY_DIR}/sentry/external/crashpad/minidump/minidump_misc_info_writer.cc COPYONLY)
        configure_file(${CMAKE_CURRENT_SOURCE_DIR}/sentry/minidump_thread_name_list_writer.h ${THIRDPARTY_DIR}/sentry/external/crashpad/minidump/minidump_thread_name_list_writer.h COPYONLY)
        configure_file(${CMAKE_CURRENT_SOURCE_DIR}/sentry/minidump_thread_name_list_writer.cc ${THIRDPARTY_DIR}/sentry/external/crashpad/minidump/minidump_thread_name_list_writer.cc COPYONLY)
        configure_file(${CMAKE_CURRENT_SOURCE_DIR}/sentry/minidump_file_writer.cc ${THIRDPARTY_DIR}/sentry/external/crashpad/minidump/minidump_file_writer.cc COPYONLY)
        configure_file(${CMAKE_CURRENT_SOURCE_DIR}/sentry/cpu_context_win.h ${THIRDPARTY_DIR}/sentry/external/crashpad/snapshot/win/cpu_context_win.h COPYONLY)
        configure_file(${CMAKE_CURRENT_SOURCE_DIR}/sentry/cpu_context_win.cc ${THIRDPARTY_DIR}/sentry/external/crashpad/snapshot/win/cpu_context_win.cc COPYONLY)
        configure_file(${CMAKE_CURRENT_SOURCE_DIR}/sentry/thread_snapshot_win.cc ${THIRDPARTY_DIR}/sentry/external/crashpad/snapshot/win/thread_snapshot_win.cc COPYONLY)
        configure_file(${CMAKE_CURRENT_SOURCE_DIR}/sentry/exception_snapshot_win.cc ${THIRDPARTY_DIR}/sentry/external/crashpad/snapshot/win/exception_snapshot_win.cc COPYONLY)
        configure_file(${CMAKE_CURRENT_SOURCE_DIR}/sentry/process_reader_win.cc ${THIRDPARTY_DIR}/sentry/external/crashpad/snapshot/win/process_reader_win.cc COPYONLY)
        configure_file(${CMAKE_CURRENT_SOURCE_DIR}/sentry/process_snapshot_minidump.cc ${THIRDPARTY_DIR}/sentry/external/crashpad/snapshot/minidump/process_snapshot_minidump.cc COPYONLY)

        set(SENTRY_BUILD_SHARED_LIBS OFF CACHE BOOL "SENTRY_BUILD_SHARED_LIBS" FORCE)
        set(SENTRY_BUILD_TESTS OFF CACHE BOOL "SENTRY_BUILD_TESTS" FORCE)
        set(SENTRY_BUILD_EXAMPLES OFF CACHE BOOL "SENTRY_BUILD_EXAMPLES" FORCE)
        set(SENTRY_ENABLE_INSTALL OFF CACHE BOOL "SENTRY_ENABLE_INSTALL" FORCE)
        set(SENTRY_INTEGRATION_QT OFF CACHE BOOL "SENTRY_INTEGRATION_QT" FORCE)
        
        if(MSVC)
            set(SENTRY_BUILD_RUNTIMESTATIC ${MENGINE_STATIC_CRT} CACHE BOOL "SENTRY_BUILD_RUNTIMESTATIC" FORCE)
        endif()
        
        ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/sentry ${CMAKE_TEMP_DIR}/sentry)
    endif()
endif()

if(MENGINE_DEPENDENCE_RPMALLOC)
    message("================rpmalloc================")
   
    ADD_SUBDIRECTORY(rpmalloc)
endif()

if(MENGINE_TARGET_WINDOWS AND MENGINE_TOOLCHAIN_MSVC)
    if(MENGINE_DEPENDENCE_OPTICK)
        message("================optick================")
        configure_file(${CMAKE_CURRENT_SOURCE_DIR}/optick/CMakeLists.txt ${THIRDPARTY_DIR}/optick/CMakeLists.txt COPYONLY)

        set(OPTICK_ENABLED ON CACHE BOOL "OPTICK_ENABLED" FORCE)
        set(OPTICK_INSTALL_TARGETS OFF CACHE BOOL "OPTICK_INSTALL_TARGETS" FORCE)
        set(OPTICK_USE_VULKAN OFF CACHE BOOL "OPTICK_USE_VULKAN" FORCE)
        set(OPTICK_USE_D3D12 OFF CACHE BOOL "OPTICK_USE_D3D12" FORCE)
        set(OPTICK_BUILD_GUI_APP OFF CACHE BOOL "OPTICK_USE_D3D12" FORCE)
        set(OPTICK_BUILD_CONSOLE_SAMPLE OFF CACHE BOOL "OPTICK_USE_D3D12" FORCE)

        ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/optick ${CMAKE_TEMP_DIR}/optick)
    endif()
endif()

if(MENGINE_TARGET_WINDOWS AND MENGINE_TOOLCHAIN_MSVC)
    if(MENGINE_DEPENDENCE_GAMEANALYTICS)
        message("================gameanalytics================")
        
        SET(PLATFORM "win32-vc141-static" CACHE STRING "PLATFORM" FORCE)
        SET(NO_SQLITE_SRC "NO" CACHE STRING "NO_SQLITE_SRC" FORCE)
        
        ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/gameanalytics/build/cmake/gameanalytics ${CMAKE_TEMP_DIR}/gameanalytics)
    endif()
endif()

if(MENGINE_DEPENDENCE_SDL2)
    message("================SDL2================")
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/SDL2/CMakeLists.txt ${THIRDPARTY_DIR}/SDL2/CMakeLists.txt COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/SDL2/SDL_error.c ${THIRDPARTY_DIR}/SDL2/src/SDL_error.c COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/SDL2/SDL_error.h ${THIRDPARTY_DIR}/SDL2/include/SDL_error.h COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/SDL2/SDL_dynapi_procs.h ${THIRDPARTY_DIR}/SDL2/src/dynapi/SDL_dynapi_procs.h COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/SDL2/SDL_dynapi_overrides.h ${THIRDPARTY_DIR}/SDL2/src/dynapi/SDL_dynapi_overrides.h COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/SDL2/SDL_rwops.c ${THIRDPARTY_DIR}/SDL2/src/file/SDL_rwops.c COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/SDL2/SDL_string.c ${THIRDPARTY_DIR}/SDL2/src/stdlib/SDL_string.c COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/SDL2/SDL_stdlib.c ${THIRDPARTY_DIR}/SDL2/src/stdlib/SDL_stdlib.c COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/SDL2/SDL_androidvideo.c ${THIRDPARTY_DIR}/SDL2/src/video/android/SDL_androidvideo.c COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/SDL2/SDL_uikitappdelegate.m ${THIRDPARTY_DIR}/SDL2/src/video/uikit/SDL_uikitappdelegate.m COPYONLY)
    
    if(MENGINE_PLATFORM_SDL AND (MENGINE_TARGET_WINDOWS OR MENGINE_TARGET_UNIX OR MENGINE_TARGET_IOS OR MENGINE_TARGET_IOS_SIMULATOR OR MENGINE_TARGET_MACOS))
        set(SDL_CMAKE_DEBUG_POSTFIX "d" CACHE STRING "Name suffix for debug builds" FORCE)
        
        if(MENGINE_TOOLCHAIN_MSVC)
            set(SDL_FORCE_STATIC_VCRT ${MENGINE_STATIC_CRT} CACHE BOOL "Force /MT for static VC runtimes" FORCE)
        endif()
        
        if(MENGINE_WINDOWS_UNIVERSAL)
            set(WINDOWS_STORE ON CACHE BOOL "WINDOWS_STORE" FORCE)
            set(HAVE_SENSORSAPI_H OFF CACHE BOOL "HAVE_SENSORSAPI_H" FORCE)
        endif()

        if(MENGINE_TARGET_WINDOWS)
            set(SDL_SHARED OFF CACHE BOOL "Build a static version of the library" FORCE)
            set(SDL_STATIC ON CACHE BOOL "Build a static version of the library" FORCE)
        endif()
        
        if(MENGINE_TARGET_ANDROID)
            set(SDL_SHARED ON CACHE BOOL "Build a static version of the library" FORCE)
            set(SDL_STATIC OFF CACHE BOOL "Build a static version of the library" FORCE)
        endif()

        if(MENGINE_TARGET_IOS OR MENGINE_TARGET_IOS_SIMULATOR)
            set(SDL_SHARED OFF CACHE BOOL "Build a static version of the library" FORCE)
            set(SDL_STATIC ON CACHE BOOL "Build a static version of the library" FORCE)
        endif()

        if(MENGINE_TARGET_MACOS)
            set(SDL_SHARED OFF CACHE BOOL "Build a static version of the library" FORCE)
            set(SDL_STATIC ON CACHE BOOL "Build a static version of the library" FORCE)
        endif()
        
        if(MENGINE_TARGET_UNIX)
            set(SDL_SHARED OFF CACHE BOOL "Build a static version of the library" FORCE)
            set(SDL_STATIC ON CACHE BOOL "Build a static version of the library" FORCE)
        endif()

        set(SDL_JOYSTICK ON CACHE BOOL "SDL_JOYSTICK" FORCE)
        set(SDL_JOYSTICK_ENABLED_BY_DEFAULT ON CACHE BOOL "SDL_JOYSTICK_ENABLED_BY_DEFAULT" FORCE)
        set(SDL_HAPTIC ON CACHE BOOL "SDL_HAPTIC" FORCE)
        set(SDL_HAPTIC_ENABLED_BY_DEFAULT ON CACHE BOOL "SDL_HAPTIC_ENABLED_BY_DEFAULT" FORCE)
        set(SDL_POWER ON CACHE BOOL "SDL_POWER" FORCE)
        set(SDL_POWER_ENABLED_BY_DEFAULT ON CACHE BOOL "SDL_POWER_ENABLED_BY_DEFAULT" FORCE)

        set(LIBC ON CACHE BOOL "LIBC" FORCE)

        ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/SDL2 ${CMAKE_TEMP_DIR}/SDL2)
    endif()

    if(MENGINE_PLATFORM_SDL AND MENGINE_TARGET_ANDROID)
        configure_file(${CMAKE_CURRENT_SOURCE_DIR}/SDL2/SDLActivity.java ${THIRDPARTY_DIR}/SDL2/android-project/app/src/main/java/org/libsdl/app/SDLActivity.java COPYONLY)
        configure_file(${CMAKE_CURRENT_SOURCE_DIR}/SDL2/SDLSurface.java ${THIRDPARTY_DIR}/SDL2/android-project/app/src/main/java/org/libsdl/app/SDLSurface.java COPYONLY)
    endif()
endif()

if(MENGINE_DEPENDENCE_OPENAL_SOFT)
    message("================openal-soft================")
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/openal-soft/CMakeLists.txt ${THIRDPARTY_DIR}/openal-soft/CMakeLists.txt COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/openal-soft/alfstream.cpp ${THIRDPARTY_DIR}/openal-soft/common/alfstream.cpp COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/openal-soft/dynload.cpp ${THIRDPARTY_DIR}/openal-soft/common/dynload.cpp COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/openal-soft/strutils.cpp ${THIRDPARTY_DIR}/openal-soft/common/strutils.cpp COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/openal-soft/alconfig.cpp ${THIRDPARTY_DIR}/openal-soft/alc/alconfig.cpp COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/openal-soft/helpers.cpp ${THIRDPARTY_DIR}/openal-soft/core/helpers.cpp COPYONLY)
    configure_file(${CMAKE_CURRENT_SOURCE_DIR}/openal-soft/alstring.h ${THIRDPARTY_DIR}/openal-soft/common/alstring.h COPYONLY)
    
    if(NOT MENGINE_TARGET_IOS AND NOT MENGINE_TARGET_IOS_SIMULATOR AND NOT MENGINE_TARGET_ANDROID)        
        if(MENGINE_WINDOWS_UNIVERSAL)
            SET(ALSOFT_NO_UID_DEFS ON CACHE BOOL "Do not define GUIDs, IIDs, CLSIDs, or PropertyKeys" FORCE)
        else()
            SET(ALSOFT_NO_UID_DEFS OFF CACHE BOOL "Do not define GUIDs, IIDs, CLSIDs, or PropertyKeys" FORCE)
        endif()
        
        SET(ALSOFT_DLOPEN OFF CACHE BOOL "Check for the dlopen API for loading optional libs" FORCE)
        SET(ALSOFT_WERROR OFF CACHE BOOL "Treat compile warnings as errors" FORCE)
        SET(ALSOFT_UTILS OFF CACHE BOOL "Build and install utility programs" FORCE)
        SET(ALSOFT_NO_CONFIG_UTIL ON CACHE BOOL "Disable building the alsoft-config utility" FORCE)
        SET(ALSOFT_EXAMPLES OFF CACHE BOOL "Build and install example programs" FORCE)
        SET(ALSOFT_INSTALL OFF CACHE BOOL "Install main library" FORCE)
        SET(ALSOFT_INSTALL_CONFIG OFF CACHE BOOL "Install alsoft.conf sample configuration file" FORCE)
        SET(ALSOFT_INSTALL_HRTF_DATA OFF CACHE BOOL "Install HRTF data files" FORCE)
        SET(ALSOFT_INSTALL_AMBDEC_PRESETS OFF CACHE BOOL "Install AmbDec preset files" FORCE)
        SET(ALSOFT_INSTALL_EXAMPLES OFF CACHE BOOL "Install example programs (alplay, alstream, ...)" FORCE)
        SET(ALSOFT_INSTALL_UTILS OFF CACHE BOOL "Install utility programs (openal-info, alsoft-config, ...)" FORCE)
        SET(ALSOFT_UPDATE_BUILD_VERSION OFF CACHE BOOL "Update git build version info" FORCE)
        
        if(WIN32)
            SET(ALSOFT_EAX ON CACHE BOOL "Enable legacy EAX extensions" FORCE)
        else()
            SET(ALSOFT_EAX OFF CACHE BOOL "Enable legacy EAX extensions" FORCE)
        endif()
        
        SET(ALSOFT_BUILD_ROUTER OFF CACHE BOOL "Build the router (EXPERIMENTAL; creates OpenAL32.dll and soft_oal.dll)" FORCE)
        SET(ALSOFT_BUILD_IMPORT_LIB OFF CACHE BOOL "Build an import .lib using dlltool (requires sed)" FORCE)
        SET(ALSOFT_OSX_FRAMEWORK OFF CACHE BOOL "Build as macOS framework" FORCE)

        if(MSVC)
            SET(FORCE_STATIC_VCRT ${MENGINE_STATIC_CRT} CACHE BOOL "Force /MT for static VC runtimes" FORCE)
        else()
            SET(FORCE_STATIC_VCRT OFF CACHE BOOL "Force /MT for static VC runtimes" FORCE)
        endif()
        
        SET(ALSOFT_STATIC_LIBGCC OFF CACHE BOOL "Force -static-libgcc for static GCC runtimes" FORCE)
        SET(ALSOFT_STATIC_STDCXX OFF CACHE BOOL "Static link libstdc++" FORCE)
        SET(ALSOFT_STATIC_WINPTHREAD OFF CACHE BOOL "Static link libwinpthread" FORCE)
        SET(ALSOFT_BACKEND_WAVE OFF CACHE BOOL "Enable Wave Writer backend" FORCE)
        SET(ALSOFT_REQUIRE_SDL2 OFF CACHE BOOL "Require SDL2 backend" FORCE)
        SET(ALSOFT_ENABLE_SSE2_CODEGEN ON CACHE BOOL "Enable SSE2 code generation instead of x87 for 32-bit targets." FORCE)
        SET(ALSOFT_EMBED_HRTF_DATA OFF CACHE BOOL "Embed the HRTF data files (increases library footprint)" FORCE)
        SET(ALSOFT_CPUEXT_SSE3 OFF CACHE BOOL "Enable SSE3 support" FORCE)
        SET(ALSOFT_CPUEXT_SSE4_1 OFF CACHE BOOL "Enable SSE4.1 support" FORCE)
        SET(OPENAL_SHARED OFF CACHE BOOL "OPENAL_SHARED" FORCE)
        
        if(MENGINE_TOOLCHAIN_MSVC)
            SET(ALSOFT_STATIC_WINPTHREAD ON CACHE BOOL "Static link libwinpthread" FORCE)
        endif()
        
        if(MENGINE_WINDOWS_UNIVERSAL)
            SET(ALSOFT_BACKEND_WINMM OFF CACHE BOOL "Enable Windows Multimedia backend" FORCE)
            SET(ALSOFT_BACKEND_DSOUND OFF CACHE BOOL "Enable DirectSound backend" FORCE)
            SET(ALSOFT_BACKEND_WASAPI OFF CACHE BOOL "Enable WASAPI backend" FORCE)
            SET(ALSOFT_BACKEND_SDL2 ON CACHE BOOL "Enable WASAPI backend" FORCE)
        else()
            SET(ALSOFT_BACKEND_WINMM ON CACHE BOOL "Enable Windows Multimedia backend" FORCE)
            SET(ALSOFT_BACKEND_DSOUND ON CACHE BOOL "Enable DirectSound backend" FORCE)
            SET(ALSOFT_BACKEND_WASAPI ON CACHE BOOL "Enable DirectSound backend" FORCE)
            SET(ALSOFT_BACKEND_SDL2 OFF CACHE BOOL "Enable DirectSound backend" FORCE)
        endif()
        
        if(MENGINE_TOOLCHAIN_MINGW)
            SET(OPENAL_SHARED OFF CACHE BOOL "OPENAL_SHARED" FORCE)
            SET(ALSOFT_STATIC_LIBGCC ON CACHE BOOL "ALSOFT_STATIC_LIBGCC" FORCE)
        endif()

        ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/openal-soft ${CMAKE_TEMP_DIR}/openal-soft)
    endif()    
endif()

if(MENGINE_DEPENDENCE_SPNG)
    message("================libspng================")    
    set(ENABLE_OPT ON CACHE BOOL "ENABLE_OPT" FORCE)
    set(SPNG_SHARED OFF CACHE BOOL "SPNG_SHARED" FORCE)
    set(SPNG_STATIC ON CACHE BOOL "SPNG_STATIC" FORCE)
    
    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/libspng ${CMAKE_TEMP_DIR}/libspng)
    add_dependencies(spng_static zlib)
endif()


if(MENGINE_DEPENDENCE_PYBIND)
    message("================pybind================")
    set(PYBIND_PROJECT_NAME "pybind" CACHE STRING "PYBIND_PROJECT_NAME" FORCE)
    set(PYBIND_EXTERNAL_BUILD ON CACHE BOOL "PYBIND_EXTERNAL_BUILD" FORCE)
    set(PYBIND_PYTHON_INCLUDE_PATH "${THIRDPARTY_DIR}/python" CACHE STRING "PYBIND_PYTHON_INCLUDE_PATH" FORCE)
    set(PYBIND_PYTHON_CONFIG_INCLUDE_PATH "${THIRDPARTY_DIR}/python/PC" CACHE STRING "PYBIND_PYTHON_CONFIG_INCLUDE_PATH" FORCE)
    set(PYBIND_STDEX_INCLUDE_PATH "${THIRDPARTY_DIR}/stdex/include" CACHE STRING "PYBIND_STDEX_INCLUDE_PATH" FORCE)
    set(PYBIND_STL_NOT_SUPPORT ON CACHE BOOL "PYBIND_STL_NOT_SUPPORT" FORCE)
    set(PYBIND_PYTHON_VERSION "278" CACHE STRING "PYBIND_PYTHON_VERSION" FORCE)
    set(PYBIND_PYTHON_ERROR_FORMAT_FLAG ON CACHE BOOL "PYBIND_PYTHON_ERROR_FORMAT_FLAG" FORCE)
    set(PYBIND_INSTALL OFF CACHE BOOL "PYBIND_INSTALL" FORCE)
    set(PYBIND_SANDBOX OFF CACHE BOOL "PYBIND_SANDBOX" FORCE)

    ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/pybind ${CMAKE_TEMP_DIR}/pybind)
    add_dependencies(pybind_python python)
endif()

if(MENGINE_DEPENDENCE_IMGUI)
    message("================imgui================")
    ADD_SUBDIRECTORY(imgui)
endif()

if(MENGINE_TARGET_WINDOWS)
    if(MENGINE_TOOLCHAIN_MSVC)
        if(MENGINE_DEPENDENCE_PYTHON3)
            message("================python3================")
            ADD_SUBDIRECTORY(python3)
            add_dependencies(python3 ssl crypto)
            message("================python3_decimal================")
            ADD_SUBDIRECTORY(python3_decimal)
            add_dependencies(python3_decimal python3)
        endif()
        
        if(MENGINE_DEPENDENCE_PYBIND3)
            message("================pybind3================")
            set(PYBIND_PROJECT_NAME "pybind3" CACHE STRING "PYBIND_PROJECT_NAME" FORCE)
            set(PYBIND_EXTERNAL_BUILD ON CACHE BOOL "PYBIND_EXTERNAL_BUILD" FORCE)
            set(PYBIND_PYTHON_INCLUDE_PATH "${THIRDPARTY_DIR}/python3" CACHE STRING "PYBIND_PYTHON_INCLUDE_PATH" FORCE)
            set(PYBIND_PYTHON_CONFIG_INCLUDE_PATH "${THIRDPARTY_DIR}/python3/PC" CACHE STRING "PYBIND_PYTHON_CONFIG_INCLUDE_PATH" FORCE)
            set(PYBIND_STDEX_INCLUDE_PATH "${THIRDPARTY_DIR}/stdex/include" CACHE STRING "PYBIND_STDEX_INCLUDE_PATH" FORCE)
            set(PYBIND_STL_NOT_SUPPORT ON CACHE BOOL "PYBIND_STL_NOT_SUPPORT" FORCE)
            set(PYBIND_PYTHON_VERSION "380" CACHE STRING "PYBIND_PYTHON_VERSION" FORCE)
            set(PYBIND_PYTHON_ERROR_FORMAT_FLAG OFF CACHE BOOL "PYBIND_PYTHON_ERROR_FORMAT_FLAG" FORCE)
            set(PYBIND_INSTALL OFF CACHE BOOL "PYBIND_INSTALL" FORCE)
            set(PYBIND_SANDBOX OFF CACHE BOOL "PYBIND_SANDBOX" FORCE)

            ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/pybind ${CMAKE_TEMP_DIR}/pybind3)
            add_dependencies(pybind3 python3 python3_decimal)
        endif()
    endif()
    
    if(MENGINE_DEPENDENCE_GLAD)
        message("================glad================")
        set(GLAD_INSTALL ON CACHE BOOL "GLAD_INSTALL" FORCE)
        set(USE_MSVC_RUNTIME_LIBRARY_DLL ${MENGINE_DYNAMIC_CRT} CACHE BOOL "USE_MSVC_RUNTIME_LIBRARY_DLL" FORCE)
        set(GLAD_OUT_DIR "${THIRDPARTY_DIR}/glad" CACHE STRING "GLAD_OUT_DIR" FORCE)

        ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/glad ${CMAKE_TEMP_DIR}/glad)
    endif()
    
    if(MENGINE_DEPENDENCE_GLFW3)
        message("================glfw3================")
        set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "GLFW_BUILD_EXAMPLES" FORCE)
        set(GLFW_BUILD_TESTS OFF CACHE BOOL "GLFW_BUILD_TESTS" FORCE)
        set(GLFW_BUILD_DOCS OFF CACHE BOOL "GLFW_BUILD_DOCS" FORCE)
        set(GLFW_INSTAL OFF CACHE BOOL "GLFW_INSTAL" FORCE)
        set(GLFW_VULKAN_STATIC OFF CACHE BOOL "GLFW_VULKAN_STATIC" FORCE)
        set(USE_MSVC_RUNTIME_LIBRARY_DLL ${MENGINE_DYNAMIC_CRT} CACHE BOOL "USE_MSVC_RUNTIME_LIBRARY_DLL" FORCE)

        ADD_SUBDIRECTORY(${THIRDPARTY_DIR}/glfw3 ${CMAKE_TEMP_DIR}/glfw3)
    endif()
endif()

message("============@@##COMPLETE##@@============")